--- a/public/style.css
+++ b/public/style.css
@@ -4,13 +4,14 @@
 }
 
 .main__left {
-    flex: 0.8;
+    flex: 0.5;
     display: flex;
     flex-direction: column;
 }
 
 .main__right {
-    flex: 0.2
+    flex: 0.5;
+    padding:10px;
 }
 
 .main__videos {
