--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,12 +5,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <script>
-      const ROOM_ID = "<%= roomId %>"
+      const ROOM_ID = "<%= roomId %>";
    </script>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+   <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
    <script src="/socket.io/socket.io.js" defer></script>
    <link rel="stylesheet" href="style.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
@@ -48,41 +48,30 @@
                   <span>Stop Video</span>
                </div>
             </div>
-            <div class="main__controls__block">
-               <div class="main__controls__button">
-                  <i class="fas fa-shield-alt"></i>
-                  <span>Security</span>
-               </div>
-               <div class="main__controls__button">
-                  <i class="fas fa-user-friends"></i>
-                  <span>Participants</span>
-               </div>
-               <div class="main__controls__button">
-                  <i class="fas fa-comment-alt"></i>
-                  <span>Chat</span>
-               </div>
-            </div>
-            <div class="main__controls__block">
-               <div class="main__controls__button">
-                  <span class="leave_meeting">Leave Meeting</span>
-               </div>
-            </div>
          </div>
       </div>
       <div class="main__right">
          <div class="main__header">
             <h6>Chat</h6>
          </div>
-         <div class="main__chat_window">
-            <ul class="messages">
-               
-            </ul>
-
-         </div>
-         <div class="main__message_container">
-            <input id="chat_message" type="text" placeholder="Type message here...">
-         </div>
+         <div style="display: none;" class="mt-4" id="div_language">
+            <h2 class="mb-3 text-light">Select Language</h2>
+            <select class="form-select bg-secondary text-light" id="select_language" onchange="updateCountry()"></select>
+            <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
+          </div>
+          <h2 class="mt-4 text-light">Notulen</h2>
+          <div class="p-3" style="border: 1px solid gray; height: 300px; border-radius: 8px;">
+            <span id="final" class="text-light"></span>
+            <span id="interim" class="text-secondary"></span>
+          </div>
+          <div class="mt-4">
+            <button class="btn btn-success" id="start">Create Text</button>
+            <button class="btn btn-danger" id="stop">Stop</button>
+            <p id="status" class="lead mt-3 text-light" style="display: none">Listenting ...</p>
+          </div>
       </div>
    </div>
+   <script src="speechRecognition.js"></script>
+  <script src="language.js"></script>
 </body>
 </html>
