--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Notulen</title>
    <script>
       const ROOM_ID = "<%= roomId %>";
    </script>
@@ -34,7 +34,6 @@
       <div class="main__left">
          <div class="main__videos">
             <div id="video-grid">
-      
             </div>
          </div>
          <div class="main__controls">
@@ -52,7 +51,7 @@
       </div>
       <div class="main__right">
          <div class="main__header">
-            <h6>Chat</h6>
+            <h6>Room Id : <%= roomId %></h6>
          </div>
          <div style="display: none;" class="mt-4" id="div_language">
             <h2 class="mb-3 text-light">Select Language</h2>
