--- a/views/notulen.ejs
+++ b/views/notulen.ejs
@@ -7,7 +7,9 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
     <title>Dashboard Template · Bootstrap v5.1</title>
-
+    <script>
+      const ROOM_ID = "<%= roomId %>";
+   </script>
     
 
     <!-- Bootstrap core CSS -->
