--- a/views/notulen.ejs
+++ b/views/notulen.ejs
@@ -102,6 +102,18 @@
 
       <div id="video-grid">
       </div>
+      <div class="main__controls">
+        <div class="main__controls__block">
+           <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
+              <i class="fas fa-microphone"></i>
+              <span>Mute</span>
+           </div>
+           <div onclick="playStop()" class="main__controls__button main__video_button" >
+              <i class="fas fa-video"></i>
+              <span>Stop Video</span>
+           </div>
+        </div>
+     </div>
 
       <h2>Notulen</h2>
       <div style="display: none;" class="mt-4" id="div_language">
