--- a/views/notulen-v2.ejs
+++ b/views/notulen-v2.ejs
@@ -2,6 +2,9 @@
 <html dir="ltr" lang="en">
 
 <head>
+    <script>
+        const ROOM_ID = "<%= roomId %>";
+     </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
@@ -313,9 +316,9 @@
     <script src="dist/js/app-style-switcher.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
     <script src="assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <!-- <script src="assets/extra-libs/sparkline/sparkline.js"></script> -->
+    <script src="assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <!-- <script src="dist/js/waves.js"></script> -->
+    <script src="dist/js/waves.js"></script>
     <!--Menu sidebar -->
     <script src="dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
