--- a/views/notulen-v2.ejs
+++ b/views/notulen-v2.ejs
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
-    <title>Xtreme admin Template - The Ultimate Multipurpose admin template</title>
+    <title>Notulen</title>
     <!-- This page css -->
     <!-- Custom CSS -->
     <link href="dist/css/style.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
          height: 150px;
          width: 100%;
          object-fit: cover;
-         padding: 8px;
+         padding: 5px;
       }
    </style>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -172,7 +172,7 @@
             <!-- ============================================================== -->
             <div class="left-part bg-white fixed-left-part">
                 <!-- Mobile toggle button -->
-                <a class="ti-menu ti-close btn btn-success show-left-part d-block d-md-none" href="javascript:void(0)"></a>
+                <a class="ti-user btn btn-success show-left-part d-block d-md-none" href="javascript:void(0)"></a>
                 <!-- Mobile toggle button -->
                 <div class="p-15">
                     <h4>Chat Sidebar</h4>
@@ -217,47 +217,16 @@
                                 <!--chat Row -->
                                 <ul class="chat-list">
                                     <!--chat Row -->
-                                    <li class="chat-item">
+                                    <!-- <li class="chat-item">
                                         <div class="chat-img"><img src="assets/images/users/1.jpg" alt="user"></div>
                                         <div class="chat-content">
                                             <h6 class="font-medium">James Anderson</h6>
                                             <div class="box bg-light-info">Lorem Ipsum is simply dummy text of the printing &amp; type setting industry.</div>
                                         </div>
                                         <div class="chat-time">10:56 am</div>
-                                    </li>
-                                    <!--chat Row -->
-                                    <li class="chat-item">
-                                        <div class="chat-img"><img src="assets/images/users/2.jpg" alt="user"></div>
-                                        <div class="chat-content">
-                                            <h6 class="font-medium">Bianca Doe</h6>
-                                            <div class="box bg-light-info">It’s Great opportunity to work.</div>
-                                        </div>
-                                        <div class="chat-time">10:57 am</div>
-                                    </li>
-                                    <!--chat Row -->
-                                    <li class="odd chat-item">
-                                        <div class="chat-content">
-                                            <div class="box bg-light-inverse">I would love to join the team.</div>
-                                            <br>
-                                        </div>
-                                    </li>
-                                    <!--chat Row -->
-                                    <li class="odd chat-item">
-                                        <div class="chat-content">
-                                            <div class="box bg-light-inverse">Whats budget of the new project.</div>
-                                            <br>
-                                        </div>
-                                        <div class="chat-time">10:59 am</div>
-                                    </li>
-                                    <!--chat Row -->
-                                    <li class="chat-item">
-                                        <div class="chat-img"><img src="assets/images/users/3.jpg" alt="user"></div>
-                                        <div class="chat-content">
-                                            <h6 class="font-medium">Angelina Rhodes</h6>
-                                            <div class="box bg-light-info">Well we have good budget for the project</div>
-                                        </div>
-                                        <div class="chat-time">11:00 am</div>
-                                    </li>
+                                    </li> -->
+                                    
+                                    
                                     <!--chat Row -->
                                 </ul>
                             </div>
@@ -275,13 +244,13 @@
                                         <span id="interim" class="text-secondary"></span>
                                     </div>
                                     <div class="mt-2">
-                                        <p id="status" class="lead mt-3 text-bold" style="display: none;color: white;">Listenting ...</p>
                                         <button class="btn btn-sm btn-success" id="start">Create Text</button>
                                         <button class="btn btn-sm btn-danger" id="stop">Stop</button>
-                                      </div>
+                                    </div>
                                 </div>
-                                <div class="col-3">
+                                <div style="display: flex; justify-content: center; align-items: center;" class="col-3">
                                     
+                                    <p id="status" class="lead mt-3 text-bold" style="display: none;color: white;">Listenting ...</p>
                                     <!-- <a class="btn-circle btn-lg btn-cyan float-right text-white" href="javascript:void(0)"><i class="fas fa-paper-plane"></i></a> -->
                                 </div>
                             </div>
