--- a/views/rapat.ejs
+++ b/views/rapat.ejs
@@ -12,17 +12,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon.png">
     <title>Notulen</title>
     <!-- This page css -->
     <!-- Custom CSS -->
-    <link href="dist/css/style.min.css" rel="stylesheet">
+    <link href="/dist/css/style.min.css" rel="stylesheet">
     <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
    <script src="/socket.io/socket.io.js" defer></script>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/style.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-   <script src="script.js" defer></script>
+   <script src="/script.js" defer></script>
    <style>
        video{
          height: 150px;
@@ -69,17 +69,17 @@
                         <b class="logo-icon">
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                             <!-- Dark Logo icon -->
-                            <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                            <img src="/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
                             <!-- Light Logo icon -->
-                            <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                            <img src="/assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
                         </b>
                         <!--End Logo icon -->
                         <!-- Logo text -->
                         <span class="logo-text">
                              <!-- dark Logo text -->
-                             <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo" />
+                             <img src="/assets/images/logo-text.png" alt="homepage" class="dark-logo" />
                              <!-- Light Logo text -->    
-                             <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
+                             <img src="/assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
                         </span>
                     </a>
                     <!-- ============================================================== -->
@@ -127,7 +127,7 @@
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
+                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="/assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</a>
                             </div>
@@ -179,7 +179,6 @@
                 </div>
                 <div class="scrollable position-relative" style="height:100%;">
                     <div class="p-15">
-                        <h5 class="card-title">Anggota  </h5>
                         <div style="display: flex; justify-content: center;" class="main__controls">
                             <div class="main__controls__block">
                                <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
@@ -218,7 +217,7 @@
                                 <ul class="chat-list">
                                     <!--chat Row -->
                                     <!-- <li class="chat-item">
-                                        <div class="chat-img"><img src="assets/images/users/1.jpg" alt="user"></div>
+                                        <div class="chat-img"><img src="/assets/images/users/1.jpg" alt="user"></div>
                                         <div class="chat-content">
                                             <h6 class="font-medium">James Anderson</h6>
                                             <div class="box bg-light-info">Lorem Ipsum is simply dummy text of the printing &amp; type setting industry.</div>
@@ -239,7 +238,7 @@
                                     <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
                                   </div>
                                 <div class="col-9">
-                                    <div class="input-field m-t-0 m-b-0" style="height: 50px;">
+                                    <div id="input-notulen" class="input-field m-t-0 m-b-0" style="height: 50px;overflow-y: auto;">
                                         <span id="final" class="text-bold"></span>
                                         <span id="interim" class="text-secondary"></span>
                                     </div>
@@ -250,7 +249,7 @@
                                 </div>
                                 <div style="display: flex; justify-content: center; align-items: center;" class="col-3">
                                     
-                                    <p id="status" class="lead mt-3 text-bold" style="display: none;color: white;">Listenting ...</p>
+                                    <p id="status" class="lead mt-3 text-bold" style="display: none;color: white;">Listening..</p>
                                     <!-- <a class="btn-circle btn-lg btn-cyan float-right text-white" href="javascript:void(0)"><i class="fas fa-paper-plane"></i></a> -->
                                 </div>
                             </div>
@@ -259,6 +258,12 @@
                 </div>
             </div>
         </div>
+        <script>
+        function scrollInput() {
+            var n = $('#input-notulen');
+            n.scrollTop(n.prop("scrollHeight"));
+            }
+        </script>
         <!-- ============================================================== -->
         <!-- End Page wrapper  -->
         <!-- ============================================================== -->
@@ -273,25 +278,25 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
-    <script src="assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
+    <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
+    <script src="/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="assets/libs/popper.js/dist/umd/popper.min.js"></script>
-    <script src="assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/assets/libs/popper.js/dist/umd/popper.min.js"></script>
+    <script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- apps -->
-    <script src="dist/js/app.min.js"></script>
-    <script src="dist/js/app.init.dark.js"></script>
-    <script src="dist/js/app-style-switcher.js"></script>
+    <script src="/dist/js/app.min.js"></script>
+    <script src="/dist/js/app.init.dark.js"></script>
+    <script src="/dist/js/app-style-switcher.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="/assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="dist/js/waves.js"></script>
+    <script src="/dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="dist/js/sidebarmenu.js"></script>
+    <script src="/dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="dist/js/custom.min.js"></script>
+    <script src="/dist/js/custom.min.js"></script>
     <!--This page JavaScript -->
     <script>
     $(function() {
@@ -307,8 +312,8 @@
         });
     });
     </script>
-    <script src="speechRecognition.js"></script>
-    <script src="language.js"></script>
+    <script src="/speechRecognition.js"></script>
+    <script src="/language.js"></script>
 </body>
 
 </html>
