--- a/views/rapat.ejs
+++ b/views/rapat.ejs
@@ -16,6 +16,7 @@
     <title>Notulen</title>
     <!-- This page css -->
     <!-- Custom CSS -->
+    
     <link href="/dist/css/style.min.css" rel="stylesheet">
     <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
@@ -197,7 +198,7 @@
                             <div id="video-grid" class="message-center chat-scroll">
                                 
                             </div>
-                        </li>
+                        </li>   
                     </ul>
                 </div>
             </div>
@@ -211,6 +212,7 @@
                 <div class="p-20">
                     <div class="card">
                         <div class="card-body">
+                            <button style="float:right" class="btn btn-sm btn-success" id="convert">Save Notulen</button>
                             <h4 class="card-title">Notulensi</h4>
                             <div class="chat-box scrollable" style="height:calc(100vh - 300px);">
                                 <!--chat Row -->
@@ -245,6 +247,7 @@
                                     <div class="mt-2">
                                         <button class="btn btn-sm btn-success" id="start">Create Text</button>
                                         <button class="btn btn-sm btn-danger" id="stop">Stop</button>
+                                       
                                     </div>
                                 </div>
                                 <div style="display: flex; justify-content: center; align-items: center;" class="col-3">
@@ -282,7 +285,7 @@
     <script src="/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
     <script src="/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="/assets/libs/popper.js/dist/umd/popper.min.js"></script>
+    <!-- <script src="/assets/libs/popper.js/dist/umd/popper.min.js"></script> -->
     <script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- apps -->
     <script src="/dist/js/app.min.js"></script>
@@ -312,6 +315,7 @@
         });
     });
     </script>
+    
     <script src="/speechRecognition.js"></script>
     <script src="/language.js"></script>
 </body>
