--- a/views/rapat.ejs
+++ b/views/rapat.ejs
@@ -215,14 +215,14 @@
                             <div class="d-flex justify-content-between">
                                 <h4 class="card-title">Notulensi</h4>
                                 <div>
-                                    <button class="btn btn-sm btn-success" id="convert">Save Notulen</button>
+                                    <button class="btn btn-sm btn-success" id="btnPrint">Save Notulen</button>
                                     <div style="display: none;" id="div_language">
                                         <select class="form-select bg-secondary text-light" id="select_language" onchange="updateCountry()"></select>
                                         <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
                                       </div>
                                     </div>
                             </div>
-                            <div class="chat-box scrollable" style="height:calc(100vh - 300px);">
+                            <div id="chat-list" class="chat-box scrollable" style="height:calc(100vh - 300px);">
                                 <!--chat Row -->
                                 <ul class="chat-list">
                                     <!--chat Row -->
@@ -276,7 +276,8 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="/assets/libs/jquery/dist/jquery.min.js"></script> -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
     <script src="/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
@@ -313,6 +314,18 @@
     
     <script src="/language.js"></script>
     <script src="/speechRecognition.js"></script>
+    <script type="text/javascript">
+        $("#btnPrint").live("click", function () {
+          var divContents = $("#chat-list").html();
+          var printWindow = window.open('', '', 'height=400,width=800');
+          printWindow.document.write('<html><head><title>Html to PDF</title>');
+          printWindow.document.write('</head><body>');
+          printWindow.document.write(divContents);
+          printWindow.document.write('</body></html>');
+          printWindow.document.close();
+          printWindow.print();
+        });
+      </script>
 </body>
 
 </html>
