--- a/views/rapat.ejs
+++ b/views/rapat.ejs
@@ -277,7 +277,7 @@
     <!-- All Jquery -->
     <!-- ============================================================== -->
     <!-- <script src="/assets/libs/jquery/dist/jquery.min.js"></script> -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
     <script src="/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
